name:                bench
version:             0
build-type:          Simple
cabal-version:       >=1.10

test-suite space
  hs-source-dirs: src, .
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -O2 -Wall
  main-is: Space.hs
  build-depends:
      base
    , bytestring
    , ghc-prim
    , weigh
    , deepseq
    , random, directory
    , parsec
    , csv-conduit
    , conduit
    , cassava
    , sv
    , csv
    , lazy-csv
    , vector
    , text
    , QuickCheck

benchmark time
  hs-source-dirs: src, .
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Time.hs
  build-depends:
      base
    , bytestring
    , ghc-prim
    , criterion
    , deepseq
    , random, directory
    , parsec
    , csv-conduit
    , conduit
    , cassava
    , sv
    , csv
    , lazy-csv
    , vector
    , text

executable report
  default-language: Haskell2010
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Report.hs
  build-depends:
     base
   , bytestring
   , ghc-prim
   , criterion
   , deepseq
   , random, directory
   , parsec
   , csv-conduit
   , conduit
   , cassava
   , sv
   , csv
   , vector
   , text
